website update - add about section, resume, and social links

--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
 
 
 
-<title>About this website</title>
+<title>Professional Experience</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -248,25 +248,19 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
-</li>
-<li>
-  <a href="plots.html">Plots</a>
-</li>
-<li>
-  <a href="plotly.html">Plotly Plots</a>
-</li>
-<li>
   <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="https://drive.google.com/file/d/1yIUcPCw4donjhBT4iUrVsJN6U8XHLGU-/view?usp=sharing">Resume</a>
+</li>
+<li>
+  <a href="mailto:&lt;mas2514@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;maria-serafini&gt;/">
+  <a href="https://github.com/maria-serafini">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -286,13 +280,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About this website</h1>
+<h1 class="title toc-ignore">Professional Experience</h1>
 
 </div>
 
 
-<p>This website was coded by Maria Serafini using RMarkdown to do all
-the hard work.</p>
 <p>Go back to the <a href="index.html">homepage</a></p>
 
 
