--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Here are some plots</title>
+<title>Resume</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -280,25 +280,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Here are some plots</h1>
+<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
 
-<p>We often make plots in data science.</p>
-<p>Here’s the tidyverse</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<p>Here’s a dataframe.</p>
-<pre class="r"><code>plot_df &lt;-
-  tibble(
-    x = rnorm(100, mean = 1, sd = 2),
-    y = 1 + 2 * x + rnorm(100)
-  )</code></pre>
-<p>Here’s a plot</p>
-<pre class="r"><code>plot_df |&gt; 
-  ggplot(aes(x = x, y = y)) +
-  geom_point()</code></pre>
-<p><img src="plots_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
 <p>Go back to the <a href="index.html">homepage</a></p>
 
 
