--- a/about.knit.html
+++ b/about.knit.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Here are some plots</title>
+<title>Professional Experience</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -32,8 +32,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.5.2/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -248,6 +246,12 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="about.html">About Me</a>
+</li>
+<li>
+  <a href="plotly.html">Plotly Plots</a>
+</li>
+<li>
   <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
@@ -280,25 +284,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Here are some plots</h1>
+<h1 class="title toc-ignore">Professional Experience</h1>
 
 </div>
 
 
-<p>We often make plots in data science.</p>
-<p>Here’s the tidyverse</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<p>Here’s a dataframe.</p>
-<pre class="r"><code>plot_df &lt;-
-  tibble(
-    x = rnorm(100, mean = 1, sd = 2),
-    y = 1 + 2 * x + rnorm(100)
-  )</code></pre>
-<p>Here’s a plot</p>
-<pre class="r"><code>plot_df |&gt; 
-  ggplot(aes(x = x, y = y)) +
-  geom_point()</code></pre>
-<p><img src="plots_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
 <p>Go back to the <a href="index.html">homepage</a></p>
 
 
