--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 
 
-<title>My awesome website</title>
+<title>Maria A. Serafini</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -324,25 +324,19 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
-</li>
-<li>
-  <a href="plots.html">Plots</a>
-</li>
-<li>
-  <a href="plotly.html">Plotly Plots</a>
-</li>
-<li>
   <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="https://drive.google.com/file/d/1yIUcPCw4donjhBT4iUrVsJN6U8XHLGU-/view?usp=sharing">Resume</a>
+</li>
+<li>
+  <a href="mailto:&lt;mas2514@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;maria-serafini&gt;/">
+  <a href="https://github.com/maria-serafini">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -362,23 +356,28 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">Maria A. Serafini</h1>
 
 </div>
 
 
-<div id="this-is-my-awesome-website" class="section level1">
-<h1>This is my awesome website</h1>
-<p><img
-src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
-<p>You can do everything you might usually do.</p>
-<p>This means you can add text.</p>
-<p>This website is an example coming from <a
-href="https://p8105.com/making_websites.html">P8105</a> making websites
-today! Learn more about this site <a href="about.html">here</a></p>
-<p>To show that you can just use RMD like normal, check out <a
-href="plots.html">this page</a> with plots.</p>
-<p>Here’s a picture</p>
+<p><img src="images/MAS_headshot.jpg" style="width:40%"></p>
+<div id="about" class="section level2">
+<h2>About</h2>
+<p>Maria A. Serafini is an MS Candidate in Biostatistics at the Columbia
+University Mailman School of Public Health. She has spent the past seven
+years working in clinical research at the Center for Behavioral
+Cardiovascular Health (CBCH) at Columbia University Irving Medical
+Center, where her work focuses on using wearable devices to study
+movement behaviors and cardiovascular health.</p>
+<p>Most recently, Maria served as Project Coordinator for CBCH’s
+Actigraphy Core under Dr. Keith Diaz, overseeing the operations of
+several NIH-funded studies involving accelerometry and behavioral
+interventions. She is developing expertise in statistical modeling, data
+visualization, and reproducible research using R, and is passionate
+about bridging methodological innovation with applied research to
+advance equitable, data-driven approaches to cardiovascular disease
+prevention.</p>
 </div>
 
 
